# passterm

./: Cargo.toml  LICENSE  README.md
docs/plans/: 2026-04-07-passterm-design.md  2026-04-07-passterm-implementation.md  2026-04-08-folders-import-plan.md
src/: lib.rs  tui.rs  vault.rs
src/vault/: crypto.rs  mod.rs  storage.rs
tests/: vault_test.rs
