[package]
name = "passterm"
version = "0.1.0"
edition = "2021"
authors = ["PassTerm Team"]
description = "Terminal Password Manager with encrypted vault and env injection"
license = "MIT OR Apache-2.0"

[[bin]]
name = "passterm"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
dirs = "5.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
